--- a/index.html
+++ b/index.html
@@ -16,72 +16,92 @@
 </head>
 
 <body>
-    <ul>
+
     <div id="sfondo">
+        <ul name="start"></ul>
         <div id="allI">
-         <div id="header">
-            <div id="innerHeader">L'Esame di Terza Media
-                
+            <div id="header">
+                <div id="innerHeader"><i>Le sfaccettature dell'IA</i>
 
-            </div>
-         </div>
 
-         <div id="indiceContainer">
-            <div id="indiceTitle">Indice</div>
-            <div id="indiceBlocks">
-                <div id="indiceS">
-                    <div class="indice">
-                        <div class="sopraIndice">Tecnologia</div>
-                        <div class="sottoIndice"></div>
-                    </div>
-                    <div class="indice">
-                        <div class="sopraIndice">Letteratura</div>
-                        <div class="sottoIndice"></div>
-                    </div>
-                    <div class="indice">
-                        <div class="sopraIndice">Storia</div>
-                        <div class="sottoIndice"></div>
-                    </div>
-
-                    <div class="indice">
-                        <div class="sopraIndice">Geografia</div>
-                        <div class="sottoIndice"></div>
-                    </div>
                 </div>
+            </div>
 
+            <div id="indiceContainer">
+                <div id="indiceTitle">Indice</div>
+                <div id="indiceBlocks">
+                    <div id="indiceS">
+                        <div class="indice">
+                            <div class="sopraIndice">Tecnologia</div>
+                            <div class="sottoIndice"></div>
+                        </div>
+                        <div class="indice">
+                            <div class="sopraIndice">Letteratura</div>
+                            <div class="sottoIndice"></div>
+                        </div>
+                        <div class="indice">
+                            <div class="sopraIndice">Storia</div>
+                            <div class="sottoIndice"></div>
+                        </div>
 
-                <div id="indiceG">
-                    <div class="indice">
-                        <div class="sopraIndice"> <a id="a" href="#indiceBlocks"> Inglese</a></div>
-                        <div class="sottoIndice"></div>
+                        <div class="indice">
+                            <div class="sopraIndice">Geografia</div>
+                            <div class="sottoIndice"></div>
+                        </div>
                     </div>
 
-                    <div class="indice">
-                        <div class="sopraIndice">Spagnolo</div>
-                        <div class="sottoIndice"></div>
-                    </div>
 
-                    <div class="indice">
-                        <div class="sopraIndice">Arte</div>
-                        <div class="sottoIndice"></div>
-                    </div>
+                    <div id="indiceG">
+                        <div class="indice">
+                            <div class="sopraIndice"> <a id="a" href="#indiceBlocks"> Inglese</a></div>
+                            <div class="sottoIndice"></div>
+                        </div>
 
-                    <div class="indice">
-                        <div class="sopraIndice">Musica</div>
-                        <div class="sottoIndice"></div>
+                        <div class="indice">
+                            <div class="sopraIndice">Spagnolo</div>
+                            <div class="sottoIndice"></div>
+                        </div>
+
+                        <div class="indice">
+                            <div class="sopraIndice">Arte</div>
+                            <div class="sottoIndice"></div>
+                        </div>
+
+                        <div class="indice">
+                            <div class="sopraIndice">Musica</div>
+                            <div class="sottoIndice"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        </ul>
 
 
-    <div id="mt1">
-        <div id="tmt1">Sono una frase molto figa che vi scoinvolgeraa</div>
+
+        <ul name="materie">
+            <div name="mt container">
+
+                <div1 id="mtTecnologia">
+                    <div id="mtTecno">TITOLO TECNOLOGIA</div>
+                    <div name="ct immagini" id="ctImmagini">
+                        <div name="immagine di sfondo di cui poi parlare ">PLACEHOLDER</div>
+                        <div name="immagine di sfondo di cui poi parlare ">PLACEHOLDER</div>
+                    </div>
+                </div1>
+
+
+
+                <div2></div2>
+                <div3></div3>
+                <div4></div4>
+                <div5></div5>
+                <div6></div6>
+            </div>
+
+        </ul>
+
     </div>
-   </ul>
-        
- </div>
     <script src="index.js"></script>
 </body>
 
