changed index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
     </style>
+    <link rel="shortcut icon" href="download-_3_.png" type="image/x-icon">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0&icon_names=menu" />
     <meta charset="UTF-8">
@@ -79,14 +80,14 @@
 
 
 
-        <ul name="materie">
+        <ul id="materie">
             <div name="mt container">
 
                 <div1 id="mtTecnologia">
-                    <div id="mtTecno">TITOLO TECNOLOGIA</div>
+                    <div id="mtTecnoHeader">I Cestini Intelligenti</div>
                     <div name="ct immagini" id="ctImmagini">
-                        <div name="immagine di sfondo di cui poi parlare ">PLACEHOLDER</div>
-                        <div name="immagine di sfondo di cui poi parlare ">PLACEHOLDER</div>
+                        <div name="immagine di sfondo di cui poi parlare " id="mtTP1">PLACEHOLDER</div>
+                        <div name="immagine di sfondo di cui poi parlare " id="mtTP2">PLACEHOLDER</div>
                     </div>
                 </div1>
 
