Changed code in index.js, index.html and style.css. Added placeholder imgs and thats it

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
         @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
     </style>
     <link rel="shortcut icon" href="download-_3_.png" type="image/x-icon">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0&icon_names=menu" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesina Terza Media</title>
@@ -33,7 +31,7 @@
                 <div id="indiceBlocks">
                     <div id="indiceS">
                         <div class="indice">
-                            <div class="sopraIndice">Tecnologia</div>
+                            <div class="sopraIndice"><a href="#mtTecnoHeader" class="a">Tecnologia</a></div>
                             <div class="sottoIndice"></div>
                         </div>
                         <div class="indice">
@@ -54,7 +52,7 @@
 
                     <div id="indiceG">
                         <div class="indice">
-                            <div class="sopraIndice"> <a id="a" href="#indiceBlocks"> Inglese</a></div>
+                            <div class="sopraIndice"> <a class="a" href="#indiceBlocks"> Inglese</a></div>
                             <div class="sottoIndice"></div>
                         </div>
 
@@ -85,9 +83,9 @@
 
                 <div1 id="mtTecnologia">
                     <div id="mtTecnoHeader">I Cestini Intelligenti</div>
-                    <div name="ct immagini" id="ctImmagini">
-                        <div name="immagine di sfondo di cui poi parlare " id="mtTP1">PLACEHOLDER</div>
-                        <div name="immagine di sfondo di cui poi parlare " id="mtTP2">PLACEHOLDER</div>
+                    <div name="ctimmagini" id="ctImmagini">
+                        <div name="immagine di sfondo di cui poi parlare " class="mtTP1" id="mtTP2"><p class="P1" id="P1">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet</p></div>
+                        <div name="immagine di sfondo di cui poi parlare " class="mtTP1" id="mtTP2"><p class="P1" id="P2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet</p></div>
                     </div>
                 </div1>
 
