--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Boldonse&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap');
     </style>
     <link rel="shortcut icon" href="download-_3_.png" type="image/x-icon">
     <meta charset="UTF-8">
@@ -31,20 +32,20 @@
                 <div id="indiceBlocks">
                     <div id="indiceS">
                         <div class="indice">
-                            <div class="sopraIndice"><a href="#mtTecnoHeader" class="a">Tecnologia</a></div>
+                            <div class="sopraIndice" role="button"><a href="#mtTecnoHeader" class="a">Tecnologia</a></div>
                             <div class="sottoIndice"></div>
                         </div>
                         <div class="indice">
-                            <div class="sopraIndice">Letteratura</div>
+                            <div class="sopraIndice" role="button"><a href="#mtLetH" class="a">Letteratura</a></div>
                             <div class="sottoIndice"></div>
                         </div>
                         <div class="indice">
-                            <div class="sopraIndice">Storia</div>
+                            <div class="sopraIndice" role="button">Storia</div>
                             <div class="sottoIndice"></div>
                         </div>
 
                         <div class="indice">
-                            <div class="sopraIndice">Geografia</div>
+                            <div class="sopraIndice" role="button">Geografia</div>
                             <div class="sottoIndice"></div>
                         </div>
                     </div>
@@ -52,22 +53,22 @@
 
                     <div id="indiceG">
                         <div class="indice">
-                            <div class="sopraIndice"> <a class="a" href="#indiceBlocks"> Inglese</a></div>
+                            <div class="sopraIndice" role="button"> <a class="a" href="#indiceBlocks"> Inglese</a></div>
                             <div class="sottoIndice"></div>
                         </div>
 
                         <div class="indice">
-                            <div class="sopraIndice">Spagnolo</div>
+                            <div class="sopraIndice" role="button">Spagnolo</div>
                             <div class="sottoIndice"></div>
                         </div>
 
                         <div class="indice">
-                            <div class="sopraIndice">Arte</div>
+                            <div class="sopraIndice" role="button">Arte</div>
                             <div class="sottoIndice"></div>
                         </div>
 
                         <div class="indice">
-                            <div class="sopraIndice">Musica</div>
+                            <div class="sopraIndice" role="button">Musica</div>
                             <div class="sottoIndice"></div>
                         </div>
                     </div>
@@ -79,26 +80,50 @@
 
 
         <ul id="materie">
-            <div name="mt container">
+            <div name="mtC">
 
                 <div1 id="mtTecnologia">
                     <div id="mtTecnoHeader">I Cestini Intelligenti</div>
                     <div name="ctimmagini" id="ctImmagini">
-                        <div name="immagine di sfondo di cui poi parlare " class="mtTP1" id="mtTP2"><p class="P1" id="P1">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet</p></div>
-                        <div name="immagine di sfondo di cui poi parlare " class="mtTP1" id="mtTP2"><p class="P1" id="P2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet</p></div>
+                        <div name="immagine di sfondo di cui poi parlare " class="mtTP1" id="mtTP2">
+                            <p class="P1" id="P1">Pellentesque habitant morbi tristique senectus et netus et malesuada
+                                fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor
+                                sit amet, ante. Donec eu libero sit amet</p>
+                        </div>
+                        <div name="immagine di sfondo di cui poi parlare " class="mtTP1" id="mtTP2">
+                            <p class="P1" id="P2">Pellentesque habitant morbi tristique senectus et netus et malesuada
+                                fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor
+                                sit amet, ante. Donec eu libero sit amet</p>
+                        </div>
                     </div>
                 </div1>
 
+                <div id="mtLet">
+                    <div id="fLet">
+                        <div id="cerchio">
+
+                            <div id="mtLetH">Avremo La Macchina Capace Di Sostituire Il Poeta e Lo Scrittore?</div>
+                        </div>
+
+                        <div id="imgLet">
+                              <div class="imgLet1"></div>
+                              <div class="imgLet1"></div>
+                        </div>
+                            
+                        </div>
+                    </div>
+                </div>
 
 
-                <div2></div2>
-                <div3></div3>
-                <div4></div4>
-                <div5></div5>
-                <div6></div6>
+
             </div>
+    </div>
+    </div>
 
-        </ul>
+
+    </div name="mtC">
+
+    </ul>
 
     </div>
     <script src="index.js"></script>
