--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Madimi+One&family=Special+Gothic+Expanded+One&display=swap');
     </style>
     <link rel="shortcut icon" href="download-_3_.png" type="image/x-icon">
     <meta charset="UTF-8">
@@ -16,6 +17,9 @@
 </head>
 
 <body>
+
+    <div id="loader"></div>
+
 
     <div id="sfondo">
         <ul name="start"></ul>
@@ -32,11 +36,12 @@
                 <div id="indiceBlocks">
                     <div id="indiceS">
                         <div class="indice">
-                            <div class="sopraIndice" role="button"><a href="#mtTecnoHeader" class="a">Tecnologia</a></div>
+                            <div class="sopraIndice" role="button"><a href="#mtTecnoHeader" class="a">Tecnologia</a>
+                            </div>
                             <div class="sottoIndice"></div>
                         </div>
                         <div class="indice">
-                            <div class="sopraIndice" role="button"><a href="#mtLetH" class="a">Letteratura</a></div>
+                            <div class="sopraIndice" role="button"><a href="#mtLetP" class="a">Letteratura</a></div>
                             <div class="sottoIndice"></div>
                         </div>
                         <div class="indice">
@@ -83,42 +88,118 @@
             <div name="mtC">
 
                 <div1 id="mtTecnologia">
-                    <div id="mtTecnoHeader">I Cestini Intelligenti</div>
-                    <div name="ctimmagini" id="ctImmagini">
-                        <div name="immagine di sfondo di cui poi parlare " class="mtTP1" id="mtTP2">
-                            <p class="P1" id="P1">Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor
-                                sit amet, ante. Donec eu libero sit amet</p>
+                    <div id="mtTecno">
+                        <div id="mtTecnoHeader">I Cestini Intelligenti</div>
+                        <div style="background: linear-gradient(90deg,rgba(18, 117, 89, 1) 0%, rgba(33, 148, 81, 1) 50%, rgba(3, 77, 29, 1) 100%); min-height: 700px; padding-inline: 15px 15px; border-radius: 10px;" >
+                            <div style=" display:flex; justify-content: space-evenly; flex-direction: row; gap: 5px;">
+                                <div class="dHeaderT">
+                                    <div class="tTitle">titolo</div>
+                                    <div class="sottoArgomento">
+                                        <div class="triangle"></div>
+                                        <div class="dHC">ao</div>
+                                    </div>
+                                </div>
+
+
+
+
+
+                                <div class="dHeaderT">
+                                    <div class="tTitle">titolo</div>
+                                    <div class="sottoArgomento">
+                                        <div class="triangle"></div>
+                                        <div class="dHC">ao</div>
+                                    </div>
+                                </div>
+
+                                <div class="dHeaderT">
+                                    <div class="tTitle">titolo</div>
+                                    <div class="sottoArgomento">
+                                        <div class="triangle"></div>
+                                        <div class="dHC">ao</div>
+                                    </div>
+                                </div>
+
+                                <div class="dHeaderT">
+                                    <div class="tTitle">titolo</div>
+                                    <div class="sottoArgomento">
+
+                                        <div class="triangle"></div>
+                                        <div class="dHC">ao</div>
+                                    </div>
+                                </div>
+
+                                <div class="dHeaderT">
+                                    <div class="tTitle">titolo</div>
+                                    <div class="sottoArgomento">
+                                        <div class="triangle"></div>
+                                        <div class="dHC">ao</div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
-                        <div name="immagine di sfondo di cui poi parlare " class="mtTP1" id="mtTP2">
-                            <p class="P1" id="P2">Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor
-                                sit amet, ante. Donec eu libero sit amet</p>
-                        </div>
+
                     </div>
-                </div1>
+            </div>
 
-                <div id="mtLet">
-                    <div id="fLet">
-                        <div id="cerchio">
 
-                            <div id="mtLetH">Avremo La Macchina Capace Di Sostituire Il Poeta e Lo Scrittore?</div>
-                        </div>
 
-                        <div id="imgLet">
-                              <div class="imgLet1"></div>
-                              <div class="imgLet1"></div>
-                        </div>
-                            
-                        </div>
+
+            <div id="mtLet">
+                <div id="letH">Italo Calvino in Cibernetica e Fantasmi</div>
+                <div id="fLet">
+                    <div id="cerchio">
+
+                        <div id="mtLetP">Avremo La Macchina Capace Di Sostituire Il Poeta e Lo Scrittore? </div>
+                        <div id="mtLetS">BlaBlaBlaBleBleBleBluBluBlu</div>
+                    </div>
+
+                    <div id="imgLet">
+                        <div class="imgLet1"></div>
+                        <div class="imgLet1"></div>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <div id="mtSto">
+                <div id="hS">
+                    <div id="hiS">
+                        <div id="tSto">Lo Sbarco In Normandia Ricostruito dall'Ia</div>
+                        <div id="subTSto">lorem ipsum dolor sit amet</div>
                     </div>
                 </div>
 
+                <div id="contSto">
+                    <div id="cOneS">
+                        <div class="imgSto"></div>
+                        <div class="pSto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum vero iusto,
+                            similique ad exercitationem quas ut molestias illum dicta. Nihil illo cumque recusandae est
+                            quas soluta natus expedita, quia fugiat.</div>
+                    </div>
 
+                    <div id="cTwoS">
 
+                        <div class="imgSto"></div>
+                        <div class="pSto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt,
+                            tenetur laboriosam a sequi, est fugiat recusandae pariatur soluta reiciendis atque dolor
+                            esse! Repellat eius distinctio minus corrupti aliquid dolorum fuga!
+                        </div>
+
+                    </div>
+
+                </div>
             </div>
+
+
     </div>
+
+    </ul>
+
     </div>
+
 
 
     </div name="mtC">
